Fix radio button stretching

--- a/common/v2/features/AddAccount/components/DeterministicWallets.scss
+++ b/common/v2/features/AddAccount/components/DeterministicWallets.scss
@@ -99,3 +99,7 @@
 .clickable {
   cursor: pointer;
 }
+
+.radio-image {
+  align-self: center;
+}
